Issue Menu Visibility

--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -11,6 +11,7 @@
 	top: 60px;
 	right: 50px;
 	background-color: var(--white);
+	z-index: 10;
 }
 .Menu ul {
 	list-style: none;
