--- a/src/styles/MyOrder.scss
+++ b/src/styles/MyOrder.scss
@@ -13,6 +13,7 @@
 	border-bottom-right-radius: 8px;
 	border: 1px solid var(--black);
 	overflow-y: scroll;
+	z-index: 1;
 }
 .title-container {
 	display: flex;
